syntax = "proto2";
import "Identification.proto";
package Models;

option java_package = "com.google.errorprone.bugpatterns.refactoringexperiment.models";

message MethodInvocation {
  optional Identification id = 1;
  map<int32, Identification> arguments = 2; // index -> arg
  optional Identification receiver = 3;
 }